# tanmatsu-template-irc

./: CMakeLists.txt  Makefile
main/: CMakeLists.txt  Kconfig.projbuild  bsp_lvgl.c  bsp_lvgl.h  idf_component.yml  irc_client.c  irc_client.h  irc_menu.c  irc_menu.h  irc_settings.c  irc_settings.h  irc_ui.c  irc_ui.h  main.c  sdcard.c  sdcard.h
sdkconfigs/: general  tanmatsu
